--- a/html/test.html
+++ b/html/test.html
@@ -9,11 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <style>
-        .chatbox {
-            outline: 1px solid silver;
-            min-height: 160px;
-            padding: 0.5em;
-        }
+        /*CSS styling here*/
     </style>
 </head>
 <body>
@@ -32,18 +28,16 @@
                 <input type="text" name="username" id="username" class="form-control" autocomplete="off">
             </div>
 
-            <button type="button" class="btn btn-outline-secondary mb-2" id="startBtn" onclick="startGame()">Start Game</button>
+            <button type="button" class="btn btn-outline-secondary mb-4" id="startBtn" onclick="startGame()">Start Game</button>
 
             <input type="hidden" name="action" id="action">
 
         </div>
-        <div class="col-md-5"></div>
-        <div class="col-md-3">
+        <div class="col-md-5">
             <h3>Who's Playing</h3>
-
-            <ul id="online_users">
-
-            </ul>
+            <ul id="online_users"></ul>
+        </div>
+        <div id="round" class="col-md-3">
         </div>
     </div>
 
@@ -94,16 +88,27 @@
 
     </div>
 
-    <div id="clue-div" class="row">
+    <div id="clue-div" class="row" style="display: none">
         <hr>
         <h3>Give a Clue</h3>
-        <div class="form-inline">
+        <form>
             <div class="form-group col-xs-5 col-lg-5 mb-2">
-                <label for="clue">Clue:</label>
-                <input type="text" name="clue" id="clue" class="form-control" autocomplete="off">
+                <input type="text" name="clue" id="clue" class="form-control" autocomplete="off" placeholder="Clue" minlength="3">
             </div>
-            <button type="button" class="btn btn-outline-secondary mb-2" id="clueBtn" onclick="submitClue()">Submit Clue</button>
-        </div>
+            <button type="button" class="btn btn-outline-secondary mb-4" id="clueBtn" onclick="submitClue()">Submit Clue</button>
+        </form>
+    </div>
+
+    <div id="guess-div" class="row" style="display: none">
+        <hr>
+        <h3>Guess Your Letter</h3>
+        <form>
+            <div class="form-group col-xs-5 col-lg-5 mb-2">
+                <input type="text" name="letter" id="letter" class="form-control" autocomplete="off" placeholder="Letter" maxlength="4">
+            </div>
+            <button type="button" class="btn btn-outline-secondary mb-4" id="letterBtn" onclick="submitLetter()">Submit Letter</button>
+            <button type="button" class="btn btn-outline-secondary mb-4" id="skipBtn" onclick="skipGuess()">Skip Guess</button>
+        </form>
     </div>
 
 </div>
@@ -159,6 +164,9 @@
                 case "player_display":
                     // disable start btn for all
                     document.getElementById("startBtn").disabled = true;
+                    // show clue div for all and clear any previous input
+                    document.getElementById("clue-div").style.display = "block";
+                    document.getElementById("clue").value = "";
 
                     let players = document.getElementById("players")
                     while (players.firstChild) players.removeChild(players.firstChild)
@@ -188,7 +196,11 @@
                     }
                     break;
                 case "disable-clue":
-                    document.getElementById("clueBtn").disabled = true;
+                    document.getElementById("clue-div").style.display = "none";
+                    document.getElementById("guess-div").style.display = "block";
+                    break;
+                case "disable-guess":
+                    document.getElementById("guess-div").style.display = "none";
                     break;
             }
         }
@@ -213,8 +225,30 @@
         console.log(userInput);
         let jsonData = {};
         jsonData["action"] = "clue";
-        jsonData['message'] = userInput
+        jsonData["message"] = userInput
         socket.send(JSON.stringify(jsonData));
+    }
+
+    function submitLetter() {
+        let userInput = document.getElementById("letter").value;
+        console.log(userInput);
+        let jsonData = {};
+        jsonData["action"] = "letter";
+        jsonData["message"] = userInput
+        socket.send(JSON.stringify(jsonData));
+        document.getElementById("letterBtn").innerText = "Submitted"
+        document.getElementById("letterBtn").disabled = true;
+        document.getElementById("skipBtn").disabled = true;
+    }
+
+    function skipGuess() {
+        let jsonData = {};
+        jsonData["action"] = "letter";
+        jsonData["message"] = "skip";
+        socket.send(JSON.stringify(jsonData));
+        document.getElementById("skipBtn").innerText = "Skipped"
+        document.getElementById("letterBtn").disabled = true;
+        document.getElementById("skipBtn").disabled = true;
     }
 </script>
 </html>
